# valera

./: .gitignore  README.md  local.properties.template
androidApp/: keystore.p12  keystore.p12.old
androidApp/src/androidMain/: AndroidManifest.xml
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist
rust-crypto/: Cargo.toml  LIBSBIRTH.txt  build.ps1
rust-crypto/.cargo/: config.toml
rust-crypto/examples/: test_signature.rs  verify_keys.rs
rust-crypto/src/: lib.rs
shared/: build.gradle.kts
shared/src/androidMain/kotlin/crypto/: BabyJubJubNative.kt  ZkKeyGenerator.android.kt
shared/src/androidMain/kotlin/ui/composables/: AttachmentImage.android.kt  FIIssuerAttachmentActions.android.kt  FIIssuerAttachmentInputSection.android.kt  PhotoInput.android.kt
shared/src/androidMain/kotlin/ui/views/: DocumentScannerView.android.kt
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/composeResources/values-de/: strings.xml
shared/src/commonMain/composeResources/values-en/: strings.xml
shared/src/commonMain/kotlin/: App.kt
shared/src/commonMain/kotlin/crypto/: BabyJubJub.kt  EdDSABabyJubJub.kt  Poseidon.kt  ZkKeyGenerator.kt
shared/src/commonMain/kotlin/data/: SignatureRequest.kt
shared/src/commonMain/kotlin/data/storage/: CryptoKeyRepository.kt  CryptoKeyRepositoryImpl.kt
shared/src/commonMain/kotlin/ui/composables/: AttachmentImage.kt  AttachmentPhotoGrid.kt  FIIssuerAttachmentActions.kt  FIIssuerAttachmentInputSection.kt  KeyGenerationSection.kt  (+1 more)
shared/src/iosMain/kotlin/crypto/: ZkKeyGenerator.ios.kt
(+34 files in other folders)
